# CPP

CPP2024/CPP2024/: CPP2024.vcxproj
CPP2024_Чинь_Тхи_Тху_Хоай/lab1/: lab1.cpp
CPP2024_Чинь_Тхи_Тху_Хоай_5030102_20001/x64/Debug/: CPP2024.exe.recipe  CPP2024.ilk  lab2.obj.enc  vc143.idb
CPP2024_Чинь_Тхи_Тху_Хоай_5030102_20001/x64/Debug/CPP2024.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPP2024.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CPP2024_Чинь_Тхи_Тху_Хоай_5030102_20001/x64/Release/: CPP2024.exe.recipe  CPP2024.iobj  CPP2024.ipdb
lab1/: CMakeLists.txt  lab1.cpp
lab1/calc/: calc.sln
lab1/calc/Debug/plugins/: funccos.cpp  funccotan.cpp  funcexp.cpp  funcln.cpp  funcsin.cpp  functan.cpp
lab1/calc/calc/: calc.cpp  calc.vcxproj
lab1/calc/calc/Debug/: calc.exe.recipe  calc.ilk  vc143.idb
lab1/calc/calc/Debug/calc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  calc.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab1/calc/calc/x64/Debug/: calc.exe.recipe  calc.ilk  vc143.idb
lab1/calc/calc/x64/Debug/calc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  calc.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab1/include/: Cosx.h  Cotanx.h  Logarithm.h  Operation.h  Power.h  Sinx.h  Tanx.h
lab1/src/: Cosx.cpp  Cotanx.cpp  Logarithm.cpp  Operation.cpp  Power.cpp  Sinx.cpp  Tanx.cpp  lab1.cpp
(+9 files in other folders)
